new layout for theming

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>OpenROV</title>
+    <link rel="stylesheet" href="themes/OpenROV/css/style.css">
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/jquery-1.7.2.min.js"></script>
-    <link rel="stylesheet" href="/css/style.css">
   </head>
 
   <body>
