--- a/src/static/index.html
+++ b/src/static/index.html
@@ -20,7 +20,7 @@
               <p><a class="brand" href="#"><img src="themes/OpenROV/img/logo.png" class="logo"/>&nbsp;Cockpit</a></p>
               <div class="nav-collapse collapse">
                 <ul class="nav pull-right">
-                  <li><a href="#" id="show-settings" class="hidden">Settings</a></li>
+                  <li><a href="#" id="show-settings" class="">Settings</a></li>
                   <li><a href="#about"  class="hidden">Debug</a></li>
                 </ul>
               </div><!--/.nav-collapse -->
