hiding messurement settings

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -61,7 +61,7 @@
           <div class="back-button"></div><h3>Settings</h3>
           <div class="settings-block">
             <h4>Generall Settings</h4>            
-            Unit of measurement:
+            <!--Unit of measurement:
             <div class="control-group">
               <label class="radio inline">
                 <input name="unit-of-measurement" type="radio" value="metric" data-bind="checked: unitMeasurement">
@@ -81,7 +81,7 @@
                 <input name="unit-of-temperature" type="radio" value="farenheit" data-bind="checked: unitTemperature">
                 <span>Farenheit</span>
               </label>
-            </div>            
+            </div> -->           
           </div>
           <div class="settings-block">
             <h4>Upload firmware</h4>
