--- a/src/static/index.html
+++ b/src/static/index.html
@@ -60,7 +60,7 @@
         <div class="drop-in-right" id="settings">
           <div class="back-button"></div><h3>Settings</h3>
           <div class="settings-block">
-            <h4>Generall Settings</h4>            
+            <h4>General Settings</h4>            
             <!--Unit of measurement:
             <div class="control-group">
               <label class="radio inline">
