Moved js libraries to their own folder, so they are not mixed with actual custom code

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -52,7 +52,7 @@
             <div class="container-fluid" style="height: 100%">
               <div class="control-element span2 hidden"><h6>Temperature:</h6><h2 data-bind="html: convertedTemperature"></h2></div>
               <div class="control-element span3 hidden"><div class="pull-right" id="depth-gauge"></div><h6 class="">Depth:</h6><h2 data-bind="text: convertedDepth"></h2></div>
-
+              
             </div>
           </div>
         </div>    
@@ -142,16 +142,16 @@
         <!-- Le javascript
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script type='text/javascript' src="js/jquery.min.js"></script>
-        <script type='text/javascript' src="js/jquery-ui.min.js"></script>
-        <script type='text/javascript' src="js/bootstrap.min.js"></script>
-        <script type='text/javascript' src="js/mousetrap.min.js"></script>
-        <script type='text/javascript' src='js/knockout-2.1.0.js'></script>
+        <script type='text/javascript' src="js/libs/jquery.min.js"></script>
+        <script type='text/javascript' src="js/libs/jquery-ui.min.js"></script>
+        <script type='text/javascript' src="js/libs/bootstrap.min.js"></script>
+        <script type='text/javascript' src="js/libs/mousetrap.min.js"></script>
+        <script type='text/javascript' src='js/libs/knockout-2.1.0.js'></script>
         <script type='text/javascript' src='js/OpenRovViewModel.js'></script>
         <script type='text/javascript' src='js/ArduinoFirmwareViewModel.js'></script>
-        <script type='text/javascript' src="/js/gamepad.js"></script>
-        <script type='text/javascript' src="/js/keypad.js"></script>
-        <script type='text/javascript' src="/js/frame.js"></script>
+        <script type='text/javascript' src="js/gamepad.js"></script>
+        <script type='text/javascript' src="js/keypad.js"></script>
+        <script type='text/javascript' src="js/frame.js"></script>
         <script src="/config.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
 
