Issue #19: Implemented Node.js and client JS part of feature to report run time to user

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -51,8 +51,8 @@
           <div class="navbar-inner">
             <div class="container-fluid" style="height: 100%">
               <div class="control-element span2 hidden"><h6>Temperature:</h6><h2 data-bind="html: convertedTemperature"></h2></div>
-              <div class="control-element span3 hidden"><div class="pull-right" id="depth-gauge"></div><h6 class="">Depth:</h6><h2 data-bind="text: convertedDepth"></h2></div>
-              
+              <div class="control-element span3 hidden"><div class="pull-right" id="depth-gauge"></div><h6>Depth:</h6><h2 data-bind="text: convertedDepth"></h2></div>
+                <div class="control-element span3"><h6>RunTime:</h6><h2 data-bind="text: formattedRunTime"></h2></div>
             </div>
           </div>
         </div>    
@@ -147,8 +147,9 @@
         <script type='text/javascript' src="js/libs/bootstrap.min.js"></script>
         <script type='text/javascript' src="js/libs/mousetrap.min.js"></script>
         <script type='text/javascript' src='js/libs/knockout-2.1.0.js'></script>
-        <script type='text/javascript' src='js/OpenRovViewModel.js'></script>
+        <script type='text/javascript' src='js/utilities.js'></script>
         <script type='text/javascript' src='js/ArduinoFirmwareViewModel.js'></script>
+        <script type='text/javascript' src='js/OpenRovViewModel.js'></script>
         <script type='text/javascript' src="js/gamepad.js"></script>
         <script type='text/javascript' src="js/keypad.js"></script>
         <script type='text/javascript' src="js/frame.js"></script>
