Added small visual hint showing whether the arduino is connected to the beaglebone. Will make it look better later :) (#26)

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -24,6 +24,7 @@
                   <li><a href="#about"  class="hidden">Debug</a></li>
                 </ul>
               </div><!--/.nav-collapse -->
+                <img data-bind="attr: { src: 'themes/OpenROV/img/connection-' + isArduinoConnected() + '.png' }" class="nav pull-right">
             </div>
           </div>
         </div>
