First part of issue #40: updated gamepad code to latest version of chrome

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -39,6 +39,7 @@
             <div class="span3 pull-right">
                 <div id="gamepad" class="controller well well-small" >
                     <img src="themes/OpenROV/img/gamepad.png" class="center">
+                    <p>Use the <i>2 sticks</i> to maneuver.</p>
                 </div>
                 <div id="keyboard" class="controller well well-small" >
                     <img src="themes/OpenROV/img/keyboard.png" class="center">
