#25 Imporove details on the arduino firmware upload

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -229,7 +229,9 @@
               viewmodel.arduinoFirmwareVM.toggleDetails();
             });
 
-            $('#arduiniFirmware-details').scrollTop($('#arduiniFirmware-details')[0].scrollHeight);
+            viewmodel.arduinoFirmwareVM.details.subscribe(function(data) { 
+              $('#arduiniFirmware-details').scrollTop($('#arduiniFirmware-details')[0].scrollHeight);
+            });
 
             /* ------------------------------------------
                gamepad/keyboard 
